Fix: word break on button

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -120,6 +120,7 @@
 }
 
 .button {
+  word-break: keep-all;
   cursor: pointer;
   background: #0070f3;
   color: white;
